# sketch-filter

./: .gitignore  CMakeLists.txt  README.md
gui/: CMakeLists.txt  ani_qt.cpp  ani_window.cpp  edge_qt.cpp
gui/include/: ani_window.hpp  edge_window.hpp
gui/src/: CMakeLists.txt  ani_window.cpp  edge_qt.cpp  edge_window.cpp
include/: CMakeLists.txt  IFilter.hpp  animation_filter.hpp  edge_feature_filter.hpp  filter.hpp  maximum_filter.hpp  sketch_filter.hpp
src/: CMakeLists.txt  animation_filter.cpp  edge_feature_filter.cpp  filter.cpp  main.cpp  main_ani.cpp  main_edge.cpp  maximum_filter.cpp  sketch_filter.cpp
